add nav and comments

--- a/src/main/webapp/WEB-INF/supplier/edit_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit_activity.html
@@ -419,17 +419,21 @@
 
 <!----- 預覽圖片區域 ----->
 <script>
+  window.base64Images = [];
+
   document.getElementById("eventImages").addEventListener("change", function (event) {
     const previewContainer = document.getElementById("previewContainer");
-    previewContainer.innerHTML = ""; // 清空現有預覽
-
+    // files 是用戶選擇的所有圖片檔案
     const files = event.target.files;
-
+    // 遍歷用戶選擇的所有檔案，轉成陣列
     Array.from(files).forEach((file, index) => {
-      if (!file.type.startsWith("image/")) return;
-
       const reader = new FileReader();
+
       reader.onload = function (e) {
+        const base64String = e.target.result; // 獲取Base64字串
+        window.base64Images.push(base64String);
+
+        // 創建一個 div 來顯示圖片預覽
         const previewDiv = document.createElement("div");
         previewDiv.classList.add("position-relative", "m-2");
         previewDiv.style.width = "160px";
@@ -444,9 +448,14 @@
         removeBtn.classList.add("remove-btn", "position-absolute");
 
         removeBtn.addEventListener("click", () => {
-            previewDiv.remove();
+          let removeImages = window.base64Images.indexOf(base64String);
+          if (removeImages !== -1) {
+              window.base64Images.splice(removeImages, 1); // 刪除對應的 Base64 資料
+          }
+          previewDiv.remove();
         });
 
+        // 將 img 和 removeBtn 加入 previewDiv
         previewDiv.appendChild(img);
         previewDiv.appendChild(removeBtn);
         previewContainer.appendChild(previewDiv);
