add shopping cart related frontend and backend code (initial)

--- a/src/main/webapp/WEB-INF/order/order-form.html
+++ b/src/main/webapp/WEB-INF/order/order-form.html
@@ -161,7 +161,7 @@
 											<div class="card-body">
 												<ul class="booking-detail-list">
 													<li>活動供應商<span id="supplier-name"></span></li>
-													<li>票券張數<span id=""></span></li>
+													<li>活動地點<span id="address"></span></li>
 													<li>開始時間<span id="start-time"></span></li>
 													<li>結束時間<span id="end-time"></span></li>
 												</ul>
