--- a/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
+++ b/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
@@ -16,9 +16,6 @@
 	<!-- Custom Color Option -->
 	<link href="../Full_Resido/_html/assets/css/colors.css" rel="stylesheet">
 
-	<!-- Custom CSS - 不是模板提供的 -->
-	<link href="css/front-desk.css" rel="stylesheet">
-
 </head>
 
 <body class="blue-skin">
@@ -97,35 +94,9 @@
 													<th class="py-3 text-center fs-5 fw-bold">操作</th>
 												</tr>
 											</thead>
-											<tbody>
+											<tbody id="shopping-cart-list">
 												<!-- Item #1 -->
-												<tr>
-													<td class="action text-center">
-														<input type="radio" class="form-check-input" name="shopping-cart-item">
-													</td>
-													<td class="property-container">
-														<img src="https://placehold.co/1200x800" alt="">
-														<div class="title">
-															<h4><a href="#">Serene Uptown</a></h4>
-															<span>6 Bishop Ave. Perkasie, PA </span>
-														</div>
-													</td>
-													<td>
-														<span class="table-property-price">$900 /
-															人</span>
-													</td>
-													<td>
-														<input type="number" class="form-control text-center mx-2"
-															value="1" min="1" max="10" />
-													</td>
-													<td class="action">
-														<a href="#" class="delete"><i class="fa-solid fa-trash-can"></i>
-															Delete</a>
-													</td>
-												</tr>
-
-												<!-- Item #2 -->
-												<tr>
+												<tr id="shopping-cart-item">
 													<td class="action text-center">
 														<input type="radio" class="form-check-input" name="shopping-cart-item">
 													</td>
@@ -252,11 +223,8 @@
 		});
 	</script>
 
-	<!-- ============================地址選單的js============================== -->
-	<script src="../member/js/address_form.js"></script>
-
-	<script src="../_html/assets/js/dropzone.js"></script>
-	<!-- New Js -->
+	<!-- ============================自定義js============================== -->
+	<script src="./js/shopping-cart.js"></script>
 	<script>
 
 	</script>
