--- a/src/main/webapp/WEB-INF/supplier/edit_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit_activity.html
@@ -170,7 +170,7 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>活動上架申請</h1>
+            <h1>活動編輯</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -191,7 +191,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Quick Example</h3>
+                <h3 class="card-title">活動</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -253,10 +253,6 @@
                   <!-- /.input group -->
                 </div>
                 <!-- /.form group -->
-                <div class="form-group">
-                  <label for="supplierId">供應商編號 <span style="color: red;">*</span></label>
-                  <input type="number" id="supplierId" name="supplierId" class="form-control"  placeholder="供應商編號" min="1" max="1000000" required>
-                </div>
                 <div class="form-group">
                   <label for="unitPrice">參加費用 <span style="color: red;">*</span></label>
                   <input type="number" id="unitPrice" name="unitPrice" class="form-control"  placeholder="參加費用" min="0" max="1000000" required>
@@ -418,7 +414,7 @@
 </script>
 
 <!----- 預覽圖片區域 ----->
-<script>
+<!-- <script>
   window.base64Images = [];
 
   document.getElementById("eventImages").addEventListener("change", function (event) {
@@ -463,7 +459,7 @@
         reader.readAsDataURL(file);
     });
   });
-</script>
+</script> -->
 
 <!----- 接收後端的資料 ----->
 <script src="js/edit_activity.js"></script>
