--- a/src/main/webapp/WEB-INF/supplier/supplier_account.html
+++ b/src/main/webapp/WEB-INF/supplier/supplier_account.html
@@ -29,6 +29,8 @@
   <!-- Theme style -->
   <link rel="stylesheet" href="../admin/dist/css/adminlte.min.css">
   <link rel="stylesheet" href="../admin/dist/css/form.css">
+  <!-- 引入bootstrap iocn CDN方式 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
