--- a/src/main/webapp/WEB-INF/supplier/edit_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit_activity.html
@@ -252,6 +252,17 @@
                   </div>
                   <!-- /.input group -->
                 </div>
+                <!-- Date and time range -->
+                <div class="form-group">
+                  <label>票券有效期間 <span style="color: red;"></span></label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="far fa-clock"></i></span>
+                    </div>
+                    <input type="text" id="reservationtime_1" class="form-control float-right" name="reservationtime_1">
+                  </div>
+                  <!-- /.input group -->
+                </div>
                 <!-- /.form group -->
                 <div class="form-group">
                   <label for="unitPrice">參加費用 <span style="color: red;">*</span></label>
@@ -370,6 +381,14 @@
         format: 'MM/DD/YYYY hh:mm A'
       }
     })
+    //Date range picker with time picker
+    $('#reservationtime_1').daterangepicker({
+      timePicker: true,
+      timePickerIncrement: 30,
+      locale: {
+        format: 'MM/DD/YYYY hh:mm A'
+      }
+    })
     //Date range as a button
     $('#daterange-btn').daterangepicker(
       {
@@ -412,54 +431,8 @@
 
   })
 </script>
-
-<!----- 預覽圖片區域 ----->
-<!-- <script>
-  window.base64Images = [];
-
-  document.getElementById("eventImages").addEventListener("change", function (event) {
-    const previewContainer = document.getElementById("previewContainer");
-    // files 是用戶選擇的所有圖片檔案
-    const files = event.target.files;
-    // 遍歷用戶選擇的所有檔案，轉成陣列
-    Array.from(files).forEach((file, index) => {
-      const reader = new FileReader();
-
-      reader.onload = function (e) {
-        const base64String = e.target.result; // 獲取Base64字串
-        window.base64Images.push(base64String);
-
-        // 創建一個 div 來顯示圖片預覽
-        const previewDiv = document.createElement("div");
-        previewDiv.classList.add("position-relative", "m-2");
-        previewDiv.style.width = "160px";
-        previewDiv.style.height = "120px";
-
-        const img = document.createElement("img");
-        img.src = e.target.result;
-        img.classList.add("img-thumbnail", "w-100", "h-100");
-
-        const removeBtn = document.createElement("button");
-        removeBtn.innerHTML = "✖";
-        removeBtn.classList.add("remove-btn", "position-absolute");
-
-        removeBtn.addEventListener("click", () => {
-          let removeImages = window.base64Images.indexOf(base64String);
-          if (removeImages !== -1) {
-              window.base64Images.splice(removeImages, 1); // 刪除對應的 Base64 資料
-          }
-          previewDiv.remove();
-        });
-
-        // 將 img 和 removeBtn 加入 previewDiv
-        previewDiv.appendChild(img);
-        previewDiv.appendChild(removeBtn);
-        previewContainer.appendChild(previewDiv);
-      };
-        reader.readAsDataURL(file);
-    });
-  });
-</script> -->
+  
+</script>
 
 <!----- 接收後端的資料 ----->
 <script src="js/edit_activity.js"></script>
