--- a/src/main/webapp/WEB-INF/supplier/apply_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply_activity.html
@@ -188,7 +188,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">活動申請 (第一步)</h3>
+                <h3 class="card-title">活動申請</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -229,6 +229,17 @@
                       <span class="input-group-text"><i class="far fa-clock"></i></span>
                     </div>
                     <input type="text" id="reservationtime" class="form-control float-right" name="reservationtime">
+                  </div>
+                  <!-- /.input group -->
+                </div>
+                <!-- Date and time range -->
+                <div class="form-group">
+                  <label>票券有效期間 <span style="color: red;"></span></label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text"><i class="far fa-clock"></i></span>
+                    </div>
+                    <input type="text" id="reservationtime_1" class="form-control float-right" name="reservationtime_1">
                   </div>
                   <!-- /.input group -->
                 </div>
@@ -350,6 +361,14 @@
     $('#reservation').daterangepicker()
     //Date range picker with time picker
     $('#reservationtime').daterangepicker({
+      timePicker: true,
+      timePickerIncrement: 30,
+      locale: {
+        format: 'MM/DD/YYYY hh:mm A'
+      }
+    })
+    //Date range picker with time picker
+    $('#reservationtime_1').daterangepicker({
       timePicker: true,
       timePickerIncrement: 30,
       locale: {
