modify shopping to order done about 60%

--- a/src/main/webapp/WEB-INF/order/order-form.html
+++ b/src/main/webapp/WEB-INF/order/order-form.html
@@ -117,7 +117,7 @@
 									<div class="col-lg-12 col-md-12 col-sm-12">
 										<div class="form-group">
 											<label>特殊需求</label>
-											<textarea class="form-control"></textarea>
+											<textarea id="requirement" class="form-control"></textarea>
 										</div>
 									</div>
 
