--- a/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
+++ b/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
@@ -98,7 +98,7 @@
 												<!-- Item #1 -->
 												<tr class="shopping-cart-item">
 													<td class="action text-center">
-														<input type="radio" class="form-check-input item-button" name="shopping-cart-item">
+														<input type="radio" class="form-check-input item-button" name="shopping-cart-item" value="1" />
 													</td>
 													<td class="property-container">
 														<img src="https://placehold.co/1200x800" alt="">
@@ -140,7 +140,7 @@
 									<button class="btn btn-primary rounded px-4" type="button">
 										<i class="fa fa-arrow-circle-left pr-2" aria-hidden="true">
 											繼續選購</i></button>
-									<button class="btn btn-primary rounded px-4" type="button">
+									<button id="checkout" class="btn btn-primary rounded px-4" type="button">
 										<i class="fa fa-arrow-circle-right pr-2" aria-hidden="true">
 											前往結帳</i></button>
 								</div>
