Update edit memberpassword & sendEmailforforgotpassword is OK

--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -50,7 +50,7 @@
 									<ul class="no-ul-list navigation-list">
 										<li><a href="./member-details.html">個人資料</a></li>
 										<li><a href="./member-addresses.html">我的地址</a></li>
-										<li><a href="">更改密碼</a></li>
+										<li><a href="./member-change-password.html">更改密碼</a></li>
 									</ul>
 								</div>
 							</div>
