--- a/src/main/webapp/WEB-INF/member/member-change-password.html
+++ b/src/main/webapp/WEB-INF/member/member-change-password.html
@@ -6,13 +6,14 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Resido - Residence & Real Estate HTML Template</title>
+<title>更改密碼</title>
 
 <!-- Custom CSS -->
 <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 
 <!-- chill-header css -->
-<link href="../Full_Resido/_html/assets/css/chill-header.css" rel="stylesheet">
+<link href="../Full_Resido/_html/assets/css/chill-header.css"
+	rel="stylesheet">
 
 <!-- Custom Color Option -->
 <link href="../Full_Resido/_html/assets/css/colors.css" rel="stylesheet">
@@ -83,12 +84,12 @@
 									<div class="row">
 										<div class="form-group col-md-6">
 											<label>新的密碼</label> <span class="input-required">*</span> <input
-												type="password" class="form-control">
+												type="password" class="form-control" id="newpassword">
 										</div>
 
 										<div class="form-group col-md-6">
 											<label>確認密碼</label> <span class="input-required">*</span> <input
-												type="password" class="form-control">
+												type="password" class="form-control" id="check_password">
 										</div>
 
 										<div class="form-submit">
@@ -97,7 +98,8 @@
 
 													<div class="form-group col-lg-12 col-md-12"
 														style="display: flex; justify-content: flex-end;">
-														<button class="btn btn-primary rounded px-3" type="button">確認送出</button>
+														<button class="btn btn-primary rounded px-3" type="button"
+															id="btn_edit">確認送出</button>
 													</div>
 
 												</div>
@@ -161,11 +163,13 @@
 	<script src="../Full_Resido/_html/assets/js/bootstrap.min.js"></script>
 	<script src="../Full_Resido/_html/assets/js/rangeslider.js"></script>
 	<script src="../Full_Resido/_html/assets/js/select2.min.js"></script>
-	<script src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
+	<script
+		src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
 	<script src="../Full_Resido/_html/assets/js/slick.js"></script>
 	<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
 	<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
 	<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 	<script>
 		// navbar load
@@ -198,6 +202,49 @@
 				$("#showing").slideToggle("slow");
 			});
 		});
+	</script>
+
+	<script>
+		const password = document.querySelector('#newpassword');
+		const cpassword = document.querySelector('#check_password');
+
+
+		$('#btn_edit').on("click", function(){
+			console.log("修改密碼按鈕觸發");
+	 		if (password.value !== cpassword.value) {
+			 	Swal.fire({
+			 				icon: "error",
+			 				title: "Oh...糟糕",
+			 				text: "密碼與確認密碼不同",
+			 			});
+			};
+
+			fetch('membereditpassword', {
+				method: 'PUT',
+				headers: {
+					'Content-Type': 'application/json'
+				},
+				body: JSON.stringify({
+					password: password.value,
+					memberid: member_id.value
+				}),
+			})
+// 			.then(resp => {
+// 			 return resp.json();
+// 		 })
+// 		 .then(body => {
+// 			 const { successful, errMsg } = body;
+// 			 if (body.successful) {
+// 				console.log("恭喜，個資修改成功囉！！！");
+// 				Swal.fire({
+// 					  icon: "success",
+// 					  title: "恭喜",
+// 					  text: "個資修改成功囉！",
+// 					});
+// 			 }
+		});
+
+
 	</script>
 
 </body>
