--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -1377,13 +1377,13 @@
                     <!--  listing-item-grid  -->
                     <div class="col-sm-8">
                         <div class="listing-item-grid">
-                            <div class="bg" data-bg="Full_Resido/_html/assets/img/guifan.jpg"></div>
+                            <div class="bg" data-bg="Full_Resido/_html/assets/img/hualien.jpg"></div>
                             <div class="d-gr-sec"></div>
                             <div class="listing-counter color2-bg">
                                 <span>33 </span> Locations
                             </div>
                             <div class="listing-item-grid_title">
-                                <h3><a href="listing.html">九份</a></h3>
+                                <h3><a href="listing.html">花蓮</a></h3>
                                 <p>
                                     山海間的獨特聚會，探索屬於你的精彩時刻
                                 </p>
