--- a/src/main/webapp/WEB-INF/supplier/apply_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply_activity.html
@@ -215,10 +215,10 @@
                 <div class="form-group">
                   <label for="category">活動分類 <span style="color: red;">*</span></label>
                   <select class="form-control select2" id="category" name="category" style="width: 100%;">
-                    <option selected="selected" value="art">文藝</option>
-                    <option value="entertainment">娛樂</option>
-                    <option value="technology">科技</option>
-                    <option value="sport">運動</option>
+                    <option selected="selected" value="文藝">文藝</option>
+                    <option value="娛樂">娛樂</option>
+                    <option value="科技">科技</option>
+                    <option value="運動">運動</option>
                   </select>
                 </div>
                 <!-- Date and time range -->
