remove headerHTML debugger

--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -189,7 +189,7 @@
 
 
 			 $('#btn_logout').on("click", function(){
-			 debugger;
+// 			 debugger;
 				 console.log("登出按鈕觸發");
 				 sessionStorage.clear();
 // 				 sessionStorage.removeItem("GoogleEmail");
