integrate order with ecpay OK 80% done

--- a/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
+++ b/src/main/webapp/WEB-INF/shoppingcart/shopping-cart.html
@@ -150,6 +150,7 @@
 				</div>
 			</div>
 		</section>
+		<section id="ecpay"></section>
 		<!-- ============================ Main Content End ================================== -->
 
 		<!-- ============================ Call To Action ================================== -->
