--- a/src/main/webapp/WEB-INF/order/order-form.html
+++ b/src/main/webapp/WEB-INF/order/order-form.html
@@ -199,6 +199,7 @@
 			</div>
 
 		</section>
+		<section id="ecpay"></section>
 		<!-- =================== Sidebar Search ==================== -->
 
 		<!-- ============================ Call To Action ================================== -->
