--- a/src/main/webapp/WEB-INF/activity/single-activity.html
+++ b/src/main/webapp/WEB-INF/activity/single-activity.html
@@ -138,7 +138,7 @@
 			<!-- ============================ Hero Banner  Start================================== -->
 			<div class="featured_slick_gallery gray">
 				<div class="featured_slick_gallery-slide" id="imageGallery">
-					<div class="featured_slick_padd"><a href="https://placehold.co/1200x800" class="mfp-gallery"><img src="https://placehold.co/1200x800" class="img-fluid mx-auto" alt="" /></a></div>
+					<!-- <div class="featured_slick_padd"><a href="https://placehold.co/1200x800" class="mfp-gallery"><img src="https://placehold.co/1200x800" class="img-fluid mx-auto" alt="" /></a></div> -->
 					<!-- <div class="featured_slick_padd"><a href="https://placehold.co/1200x800" class="mfp-gallery"><img src="https://placehold.co/1200x800" class="img-fluid mx-auto" alt="" /></a></div>
 					<div class="featured_slick_padd"><a href="https://placehold.co/1200x800" class="mfp-gallery"><img src="https://placehold.co/1200x800" class="img-fluid mx-auto" alt="" /></a></div>
 					<div class="featured_slick_padd"><a href="https://placehold.co/1200x800" class="mfp-gallery"><img src="https://placehold.co/1200x800" class="img-fluid mx-auto" alt="" /></a></div> -->
