--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -36,20 +36,20 @@
         <li class="active"><a id="member_index_href" href="../chilltribe.html">首頁<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="JavaScript:Void(0);">活動列表<span class="submenu-indicator"></span></a>
+        <li><a href="../activity/search-activities.html">活動列表<span class="submenu-indicator"></span></a>
 
         </li>
 
-        <li><a href="JavaScript:Void(0);">客服中心<span class="submenu-indicator"></span></a>
+        <li><a href="../activity/about-us.html">客服中心<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="JavaScript:Void(0);">常見問題<span class="submenu-indicator"></span></a>
+        <li><a href="../activity/faq.html">常見問題<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="JavaScript:Void(0);">關於我們<span class="submenu-indicator"></span></a>
+        <li><a href="../activity/about-us.html">關於我們<span class="submenu-indicator"></span></a>
         </li>
 
-        <li><a href="JavaScript:Void(0);">購物車<span class="submenu-indicator"></span></a>
+        <li><a href="../shoppingcart/shopping-cart.html">購物車<span class="submenu-indicator"></span></a>
         </li>
 
     </ul>
