--- a/src/main/webapp/WEB-INF/supplier/apply_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply_activity.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="form-group">
                   <label for="address">詳細地址 <span style="color: red;">*</span></label>
-                  <input type="text" id="address" name="address" class="form-control" placeholder="例子: 忠孝東路一段400號">
+                  <input type="text" id="address" name="address" class="form-control" placeholder="例子: 忠孝東路一段400號" required>
                 </div>
                 <div class="form-group">
                   <label for="category">活動分類 <span style="color: red;">*</span></label>
@@ -228,7 +228,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="far fa-clock"></i></span>
                     </div>
-                    <input type="text" id="reservationtime" class="form-control float-right" name="reservationtime">
+                    <input type="text" id="reservationtime" class="form-control float-right" name="reservationtime" required>
                   </div>
                   <!-- /.input group -->
                 </div>
