add icons in cards

--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -155,9 +155,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-7 col-md-10 text-center">
                         <div class="sec-heading center">
-                            <h2>Explore Good places</h2>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                                voluptatum deleniti atque corrupti quos dolores</p>
+                            <h2>活動類型</h2>
+                            <p>針對各種規模與形式的活動，提供清晰分類，讓您快速找到最合適的選擇</p>
                         </div>
                     </div>
                 </div>
@@ -166,34 +165,34 @@
                     <div class="col-md-12">
                         <div class="container_categories_box margin-top-5 margin-bottom-30">
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Electric-Guitar"></i>
-                                <h4>Events</h4>
-                                <span>08</span>
+                                <i class="fas fa-skiing-nordic"></i>
+                                <h4>運動</h4>
+                                <!-- <span>08</span> -->
                             </a>
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Electric-Guitar"></i>
-                                <h4>Events</h4>
-                                <span>08</span>
+                                <i class="fa-solid fa-palette"></i>
+                                <h4>文藝</h4>
+                                <!-- <span>08</span> -->
                             </a>
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Dumbbell"></i>
-                                <h4>Fitness</h4>
-                                <span>18</span>
+                                <i class="fa-solid fa-gamepad"></i>
+                                <h4>娛樂</h4>
+                                <!-- <span>18</span> -->
                             </a>
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Home-2"></i>
-                                <h4>Real Estate</h4>
-                                <span>14</span>
+                                <i class="fa-solid fa-music"></i>
+                                <h4>音樂</h4>
+                                <!-- <span>14</span> -->
                             </a>
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Chef-Hat"></i>
-                                <h4>Restaurant</h4>
-                                <span>22</span>
+                                <i class="fa-solid fa-utensils"></i>
+                                <h4>美食</h4>
+                                <!-- <span>22</span> -->
                             </a>
                             <a href="listings_list_with_sidebar.html" class="utf_category_small_box_part">
-                                <i class="im im-icon-Couple-Sign"></i>
-                                <h4>Dance Floor</h4>
-                                <span>20</span>
+                                <i class="fa-solid fa-globe"></i>
+                                <h4>全部</h4>
+                                <!-- <span>20</span> -->
                             </a>
                         </div>
                     </div>
@@ -1311,9 +1310,9 @@
                         <div class="listing-item-grid">
                             <div class="bg" data-bg="Full_Resido/_html/assets/img/taipei.jpg"></div>
                             <div class="d-gr-sec"></div>
-                            <div class="listing-counter color2-bg">
+                            <!-- <div class="listing-counter color2-bg">
                                 <span>16 </span> Locations
-                            </div>
+                            </div> -->
                             <div class="listing-item-grid_title">
                                 <h3><a href="listing.html">台北</a></h3>
                                 <p>
@@ -1328,9 +1327,9 @@
                         <div class="listing-item-grid">
                             <div class="bg" data-bg="Full_Resido/_html/assets/img/taichung.jpg"></div>
                             <div class="d-gr-sec"></div>
-                            <div class="listing-counter color2-bg">
+                            <!-- <div class="listing-counter color2-bg">
                                 <span>22 </span> Locations
-                            </div>
+                            </div> -->
                             <div class="listing-item-grid_title">
                                 <h3><a href="listing.html">台中</a></h3>
                                 <p>
@@ -1345,9 +1344,9 @@
                         <div class="listing-item-grid">
                             <div class="bg" data-bg="Full_Resido/_html/assets/img/tainan.jpg"></div>
                             <div class="d-gr-sec"></div>
-                            <div class="listing-counter color2-bg">
+                            <!-- <div class="listing-counter color2-bg">
                                 <span>9 </span> Locations
-                            </div>
+                            </div> -->
                             <div class="listing-item-grid_title">
                                 <h3><a href="listing.html">台南</a></h3>
                                 <p>
@@ -1362,9 +1361,9 @@
                         <div class="listing-item-grid">
                             <div class="bg" data-bg="Full_Resido/_html/assets/img/kaohsiung.jpg"></div>
                             <div class="d-gr-sec"></div>
-                            <div class="listing-counter color2-bg">
+                            <!-- <div class="listing-counter color2-bg">
                                 <span>12 </span> Locations
-                            </div>
+                            </div> -->
                             <div class="listing-item-grid_title">
                                 <h3><a href="listing.html">高雄</a></h3>
                                 <p>
@@ -1379,9 +1378,9 @@
                         <div class="listing-item-grid">
                             <div class="bg" data-bg="Full_Resido/_html/assets/img/hualien.jpg"></div>
                             <div class="d-gr-sec"></div>
-                            <div class="listing-counter color2-bg">
+                            <!-- <div class="listing-counter color2-bg">
                                 <span>33 </span> Locations
-                            </div>
+                            </div> -->
                             <div class="listing-item-grid_title">
                                 <h3><a href="listing.html">花蓮</a></h3>
                                 <p>
