--- a/src/main/webapp/WEB-INF/member/member-addresses.html
+++ b/src/main/webapp/WEB-INF/member/member-addresses.html
@@ -282,6 +282,7 @@
 	console.log('address_default_1：'+ address_default_1.textContent);
 	const tag_1 = document.getElementById("tag_1");
 	console.log('tag_1：' + tag_1.textContent);
+	const memberid = sessionStorage.getItem('memberid');
 
 // 	const zip_code_2 = document.getElementById("zip_code_2");
 // 	console.log('zip_code_2：' + zip_code_2.textContent);
@@ -317,30 +318,30 @@
 
 
 
-// 	fetch('findaddress')
-// 	.then(resp => resp.json())
-// 	.then(member => {
-// 		console.log(member);
-// 		member_id.value = member.member_id;
-// 		address_member_id.value = member.member_id;
-// 		zip_code_1.textContent = member.zip_code;
-// 		console.log('zip_code_1：' + zip_code_1.textContent);
-// 		district_id_1.textContent = member.district_id;
-// 		console.log('district_id_1：'+ district_id_1.textContent);
-// 		city_id_1.textContent = member.city_id;
-// 		console.log('city_id_1：' + city_id_1.textContent);
-// 		address_1.textContent = member.address;
-// 		console.log('address_1：' + address_1.textContent);
-// 		tag_1.textContent = member.tag;
-// 		console.log('tag_1：' + tag_1.textContent);
-// 		city_district_1.textContent = `${member.city_name}${member.district_name}`;
-// 		console.log('city_district_1：' + city_district_1.textContent);
-// 		console.log('address_default_1：'+ address_default_1.textContent);
+	fetch(`findaddress/${memberid}`)
+	.then(resp => resp.json())
+	.then(member => {
+		console.log(member);
+		member_id.value = member.member_id;
+		address_member_id.value = member.member_id;
+		zip_code_1.textContent = member.zip_code;
+		console.log('zip_code_1：' + zip_code_1.textContent);
+		district_id_1.textContent = member.district_id;
+		console.log('district_id_1：'+ district_id_1.textContent);
+		city_id_1.textContent = member.city_id;
+		console.log('city_id_1：' + city_id_1.textContent);
+		address_1.textContent = member.address;
+		console.log('address_1：' + address_1.textContent);
+		tag_1.textContent = member.tag;
+		console.log('tag_1：' + tag_1.textContent);
+		city_district_1.textContent = `${member.city_name}${member.district_name}`;
+		console.log('city_district_1：' + city_district_1.textContent);
+		console.log('address_default_1：'+ address_default_1.textContent);
 		
-// 	});
+	});
 
 // debugger;
-	fetch('findaddressall')
+	fetch(`findaddressall/${memberid}`)
 	.then(resp => resp.json())
 	.then(member => {
 		
