--- a/src/main/webapp/WEB-INF/member/favorite.html
+++ b/src/main/webapp/WEB-INF/member/favorite.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Resido - Residence & Real Estate HTML Template</title>
+<title>ChillTribe - 收藏</title>
 
 <!-- Custom CSS -->
 <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
