--- a/src/main/webapp/WEB-INF/order/order-details.html
+++ b/src/main/webapp/WEB-INF/order/order-details.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>ChillTribe - 訂購</title>
+	<link rel="icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
+    <link rel="shortcut icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
 
 	<!-- Custom CSS -->
 	<link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -43,18 +45,7 @@
 		<!-- Top header  -->
 		<!-- ============================================================== -->
 
-		<!-- ============================ Page Title Start================================== -->
-		<!-- <div class="image-cover page-title">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12">
 
-						<h2 class="ipt-title">結帳</h2>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		<!-- ============================ Page Title End ================================== -->
 
 		<!-- =================== Sidebar Search ==================== -->
 		<section class="gray">
