--- a/src/main/webapp/WEB-INF/order/order-lists.html
+++ b/src/main/webapp/WEB-INF/order/order-lists.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>ChillTribe - 訂單資訊</title>
+	<title>ChillTribe - 訂單列表</title>
 	<link rel="icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
 	<link rel="shortcut icon" href="/chill-tribe/tribe-temp.jpg" type="image/jepg">
 
@@ -18,8 +18,7 @@
 	<!-- Custom Color Option -->
 	<link href="../Full_Resido/_html/assets/css/colors.css" rel="stylesheet">
 
-	<!-- Custom CSS - 不是模板提供的 -->
-	<link href="css/front-desk.css" rel="stylesheet">
+	
 
 </head>
 
@@ -95,7 +94,7 @@
 											</div>
 										</td>
 										<td>
-											<span class="ticket-amount" data-price="900">共計</span><span>2</span><span> 張</span>
+											<span class="ticket-amount" data-price="900">共計 </span><span>2</span><span> 張</span>
 										</td>
 										<td>
 											<span class="table-property-price" data-price="900">總額</span><span> TWD$</span><span>1000</span>
@@ -178,7 +177,7 @@
 	</script>
 
 	<!-- ============================自定義js============================== -->
-
+	<script src="./js/order-lists.js"></script>
 
 </body>
 
