change intro names

--- a/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
+++ b/src/main/webapp/WEB-INF/supplier/suppliers-intro.html
@@ -228,6 +228,6 @@
 		<!-- ============================================================== -->
 		<!-- This page plugins -->
 		<!-- ============================================================== -->
-		<script src="./js/suppliers_intro.js"></script>
+		<script src="./js/suppliers-intro.js"></script>
 	</body>
 </html>
