--- a/src/main/webapp/WEB-INF/supplier/edit-activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit-activity.html
@@ -482,6 +482,6 @@
 </script>
 
 <!----- 接收後端的資料 ----->
-<script src="js/edit_activity.js"></script>
+<script src="js/edit-activity.js"></script>
 </body>
 </html>
