update member Header

--- a/src/main/webapp/WEB-INF/chilltribe.html
+++ b/src/main/webapp/WEB-INF/chilltribe.html
@@ -18,6 +18,7 @@
 
     <!-- 客製卡片css -->
     <link href="activity/css/chilltribe.css" rel="stylesheet">
+    <link href="./member/css/index.css" rel="stylesheet">
 
 </head>
 
