--- a/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-sidebar.html
@@ -149,7 +149,8 @@
 
 	const photo_base64 = document.getElementById('photo_base64');
 	// 	console.log(member_img);
-	const memberid = sessionStorage.getItem('memberid');
+// 	const memberid = sessionStorage.getItem('memberid');
+	const memberid = localStorage.getItem('memberid');
 
 
 	// 	fetch('find')
