--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -122,7 +122,8 @@
 	const index_href = document.querySelector('#index_href');
 	const img_member_header_id = document.querySelector('#img_member_header_id');
 	// 			const memberid = document.querySelector('#memberid');
-	const memberid = sessionStorage.getItem('memberid');
+// 	const memberid = sessionStorage.getItem('memberid');
+	const memberid = localStorage.getItem('memberid');
 
 
 	// to do list ...要判斷如果不是在member路徑底下(首頁)，如果不是要用別的
