--- a/src/main/webapp/WEB-INF/member/member-addresses.html
+++ b/src/main/webapp/WEB-INF/member/member-addresses.html
@@ -281,7 +281,8 @@
 		console.log('address_default_1：' + address_default_1.textContent);
 		const tag_1 = document.getElementById("tag_1");
 		console.log('tag_1：' + tag_1.textContent);
-		const memberid = sessionStorage.getItem('memberid');
+// 		const memberid = sessionStorage.getItem('memberid');
+		const memberid = localStorage.getItem('memberid');
 
 		// 	const zip_code_2 = document.getElementById("zip_code_2");
 		// 	console.log('zip_code_2：' + zip_code_2.textContent);
