--- a/src/main/webapp/WEB-INF/member/fixed-member-login.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-login.html
@@ -172,7 +172,8 @@
 				if (data.successful) {
 					console.log("登入成功");
 					if (data.memberid) {
-						sessionStorage.setItem('memberid', data.memberid);
+// 						sessionStorage.setItem('memberid', data.memberid);
+						localStorage.setItem('memberid', data.memberid);
 						console.log('memberid 已儲存到 sessionStorage:', data.memberid);
 					}
 
